Fixed out of stock button issue on mobile

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5297,6 +5297,16 @@ body {
     font-size: 20px;
   }
 }
+@media (max-width: 767px) {
+  .buy-buttons-row .mobile_popup_buy_button .mobile_popup_add_to_cart.outOfStock_btn {
+    justify-content: center !important;
+    cursor: default !important;
+  }
+  .buy-buttons-row .mobile_popup_buy_button .mobile_popup_add_to_cart.outOfStock_btn:hover {
+    background: #9792e4 !important;
+    border: 1px solid #9792e4 !important;
+  }
+}
 
 .price-label--sold-out {
   position: absolute;
@@ -5327,6 +5337,24 @@ body {
 .product-unavailable:hover {
   background: #9792e4 !important;
   border: 1px solid #9792e4 !important;
+}
+
+.outOfStock_btn {
+  display: flex;
+  border-radius: 4rem;
+  font-size: 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+}
+@media (max-width: 767px) {
+  .outOfStock_btn {
+    font-size: 18px;
+  }
 }
 
 .chill-story-section .chill-story-section-wrapper {
